Changelog
=========

Head
~~~~

- Template is invalidated when XSS-files are modified. [malthe]

- Added resource rebase support. [malthe]

